# parts

./: .gitignore  Parts.sln  Pipfile  bitbucket-pipelines.yml  buildit.sh  contributors.txt  debug.py  install.cmd  install.sh  license.txt  noxfile.py  pyproject.toml  readme.md  setup.cfg  setup.py  setup.py.bk  tox.ini
.github/workflows/: ci.yml
doc/: Getting Started Guide.docx  PartsScripts.docx  UserGuide.docx
doc/source/: conf.py  index.rst
doc/source/concepts/: Dependency-mapping.rst  components.rst  configurations.rst  mappers.rst  platforms.rst  toolchains.rst  tools.rst  version.rst
doc/source/release_notes/: release-0.16.1.rst  release-0.16.2.rst  release-0.16.3.rst  release-0.16.4.rst  release-0.16.5.rst  release-0.16.rst  release-0.17.0.rst  release-0.17.1.rst  release-0.17.2.rst  release-0.17.3.rst  release-0.17.4.rst  release-0.17.5.rst  release-0.17.6.rst  release-0.17.7.rst  release-0.18.0.rst  release-0.18.1.rst  release-0.18.2.rst  release-0.18.3.rst  release-0.18.4.rst  release-0.18.5.rst
doc/source/userapi/: partname.rst  sdk.rst  (+3 more)
doc/subdocs/: Build Targets.docx  CommandLineUsage.docx  ConfiguringParts.docx  ExtendingParts.docx  concepts.docx  overview.docx  user_api.docx  variables.docx
parts/: Parts.pyproj  __init__.py  ansi_stream.py  build_section.py  color.py  common.py  config.py  console.py  datacache.py  dependent_ref.py  dependson.py  engine.py  errors.py  exportitem.py  filters.py  functors.py  glb.py  installs.py  load_module.py  logger.py  main.py  mappers.py  metatag.py  node_helpers.py  packaging.py  part_logger.py  part_manager.py  part_ref.py  parts  parts.bat  parts.py  parts_version.py  pattern.py  picklehelpers.py  platform_info.py  policy.py  poptions.py  process_tools.py  reporter.py  requirement.py  (+7 more)
parts/Variables/: BoolVariable.py  EnumVariable.py  IntVariable.py  ListVariable.py  PackageVariable.py  PathVariable.py  __init__.py  variable.py  variables.py
parts/api/: output.py  platforms.py  register.py  requirement.py  vcs.py
parts/configurations/: __init__.py
parts/events/: __init__.py
parts/loadlogic/: __init__.py  all.py  base.py  changed.py  nodepends.py  target.py
parts/loggers/: html.py  rtf.py  text.py
parts/overrides/: __init__.py  build_hook.py  build_wrapper.py  builder.py  buildtask_debugtime.py  debug.py  default_env.py  dup_node_builder_env.py  env_alias.py  env_array.py  env_clone.py  error_handling.py  executor.py  nodes.py  os_file.py  scanner.py  sconf.py  scons_util.py  script_main_debugtime.py  stubprocess.py  symlinks.py  tool.py
parts/pieces/: __init__.py  add_xml_header.py  archive_package.py  ccommand.py  ccopy.py  deb_wrapper.py  doxygen.py  dpkg.py  encode.py  extract.py  merge_script.py  msi_wix.py  msi_wrapper.py  part_name.py  part_version.py  python_script.py  rpm.py  rpm_package.py  rpm_val.py  setrpath.py  strip_xml_comments.py  tar.py  unit_test.py  zip_file.py  zip_pkg.py
parts/pnode/: dependent_info.py  part.py  part_info.py  pnode.py  pnode_manager.py  scons_node_info.py  section.py  section_info.py  stored_info.py
parts/toolchain/: binutils.py  cl.py  clang.py  default.py  gas.py  gcc.py  gnutools.py  gxx.py  icc.py  icl.py  java.py  mstools.py  null.py  perl.py  vsip.py  vssdk.py  wdk.py  wix.py
parts/tools/: applelink.py  ar.py  as.py  c++.py  cc.py  clang.py  g++.py  gas.py  gcc.py  gnulink.py  install.py  intelc.py  jar.py  javac.py  javah.py  ld.py  lipo.py  masm.py  midl.py  mslib.py  mslink.py  mssdk.py  msvc.py  msvs.py  perl.py  signfile.py  vssdk.py  wdk.py  wix.py
parts/vcs/: __init__.py  base.py  file_system.py  git.py  null.py  reuse.py  smart_svn.py  svn.py  task.py  task_master.py
parts_util/: __init__.py  cache_unpickle.py  options_common.py  parts_setup.py  process_node_ifc.py  process_node_sample.py  scons_setup.py
samples/config_overide/: hello.c
samples/custombuilder/: Sconstruct
samples/full/: sconstruct
samples/hello-custom-gcc/: hello.parts  sconstruct
samples/hello2/: sconstruct
samples/hello2_config/: parts.cfg  sconstruct
samples/hello2_new/: sconstruct
samples/hello2_ver_select/: sconstruct
samples/hello2_ver_select_new/: sconstruct
samples/hello3/: sconstruct
samples/hello_new/: hello.parts  sconstruct
samples/intel_fortran/: SConstruct  hello.f90  intel_fortran.parts  main.f90
samples/java/: SConstruct  hello.java  hello.parts
samples/merge_libs/: Sconstruct
samples/rpm/: control.parts  control.spec  packaging.parts  sconstruct
samples/stripped/: SConstruct  advanced_pdb_action.parts  advanced_pdb_action_example  advanced_strip_action.parts  invalid_pdb_usage_model.parts  regular_dep_on_shared_with_pdb.parts  regular_not_stripped.parts  regular_stripped.parts  regular_with_pdb.parts  shared_not_stripped.parts  shared_stripped.parts  shared_with_pdb.parts  stripped.cpp
samples/subpart1/: sconstruct
samples/subpart2/: sconstruct
samples/symlinks/: sconstruct  symlinks.c  symlinks.h  symlinks.parts  symlinks2.c  symlinks3.c
samples/symlinks_posix_only/: SConstruct
samples/unit_test1/: sconstruct
samples/unit_test2/: sconstruct
samples/wdk/: SConstruct  hello.c  hello.def  hello.parts  test64.asm  tolib.c  tostatic.c
samples/wix/: SConstruct
scripts/: _parts_util_setup_.py  logload.py  parts_dump_cache.py  parts_dump_dependency.py  parts_process_nodes.py
src/parts/: __init__.py  ansi_stream.py  build_section.py  color.py  common.py  config.py  console.py  datacache.py  dependent_ref.py  dependson.py  engine.py  errors.py  exportitem.py  filters.py  functors.py  glb.py  installs.py  load_module.py  logger.py  main.py  mappers.py  metatag.py  node_helpers.py  packaging.py  part_logger.py  part_manager.py  part_ref.py  parts.py  parts_version.py  pattern.py  picklehelpers.py  platform_info.py  policy.py  poptions.py  process_tools.py  reporter.py  requirement.py  sdk.py  section.py  settings.py  (+4 more)
tests/gold_tests/: launch_tests.bat  launch_tests.py  launch_tests.sh
tests/gtest/: gtest.py  gtest.pyproj
tests/unit/: SConstruct  conftest.py  skip-for -moment-test_support.py  test_support.py
(+1257 files in other folders)
