[project]
name = "scons-parts"
dynamic = ["version"]
description = "Extension module to SCons build system"
requires-python = ">=3.11"
license = {file = "license.txt"}
keywords = ["build", "SCons", "extension"]
authors = [
  {name = "Jason Kenny", email = "dragon512@live.com"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Terminals",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "scons"
]

[dependency-groups]
dev = [
    "nox",
    "autest",
    "pytest",
    "pylama",
    "mypy",
    "autopep8",
    "sphinx",
    "myst-parser",
    "cloud-sptheme",
]

[tool.setuptools.packages.find]
where = ["src"] 

[tool.setuptools.dynamic]
version = {attr = "parts.parts_version._PARTS_VERSION"}

[project.urls]
"Homepage" = "https://github.com/sconsparts/parts"
"Source Code" = "https://github.com/sconsparts/parts"
"Documentation" = "https://sconsparts.github.io/"


[project.scripts]
parts = "parts.version_info:parts_version_text"
parts-smart-cp = "parts.scripts.smart_cp:main"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
[tool.setuptools]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 132